일단 커밋밋

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -35,6 +35,8 @@
 @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
+/* My CSS*/
+@import "minimal-mistakes/Mycss";
 
 /* google fonts. */
 // @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
