a 태그 색 수정정

--- a/_sass/minimal-mistakes/_Mycss.scss
+++ b/_sass/minimal-mistakes/_Mycss.scss
@@ -7,5 +7,5 @@
   color: black !important;
 }
 .archive__item-title a:hover::before {
-  background-color: rgb(235, 235, 198);
+  // background-color: rgb(235, 235, 198);
 }
