--- a/_sass/minimal-mistakes/_Mycss.scss
+++ b/_sass/minimal-mistakes/_Mycss.scss
@@ -9,3 +9,7 @@
 .archive__item-title a:hover::before {
   // background-color: rgb(235, 235, 198);
 }
+.archive__item-title.no_toc a {
+  text-decoration: none;
+  color: $dark-gray;
+}
