--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -158,6 +158,8 @@ pre {
 
 pre {
   overflow-x: auto; /* add scrollbars to wide code blocks*/
+  font-size: 20px;
+  tab-size: 3;
 }
 
 /* horizontal rule */
