--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -559,3 +559,47 @@ body {
     }
   }
 }
+// 코드 복사하기 css
+.code-header {
+  position: relative;
+  top: 60px;
+  right: 10px;
+  z-index: 1;
+}
+
+.copy-code-button {
+  float: right;
+  cursor: pointer;
+  background-color: $code-background-color;
+  padding: 5px 5px;
+  border-radius: 5px;
+  width: 30px;
+  height: 35px;
+  margin-top: -40px;
+  border: none;
+}
+
+.copy-code-button:focus {
+  outline: none;
+}
+
+.copy-code-button:hover {
+  background-color: gray;
+}
+
+.copy-code-image {
+  filter: invert(1);
+}
+
+.copy-code-btn {
+  color: white;
+  display: inline-block;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.copy-code-btn:hover {
+  background-color: gray;
+  cursor: pointer;
+}
+// 코드 복사하기 css
